--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+	"postinstall": "ng build --aot -prod",
   },
-  "postinstall": "ng build --aot -prod",
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.0",
-    "@angular/cli": "1.4.9",
+    "@angular/cli": "^1.7.2",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
-    "@angular/compiler-cli": "^4.4.6",
+    "@angular/compiler-cli": "^5.2.7",
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
